Create unordered list for recipe links
Prevents recipe links from being on the same line.
Adds mashed-potatoes.html and baked-mac-n-cheese.html to unordered list.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     </head>
 
     <body>
+        <h1>Odin Recipes</h1>
 
+        <ul>
+            <li><a href="./recipes/mashed-potatoes.html">Mashed Potatoes</a></li>
+            <li><a href="./recipes/baked-mac-n-cheese.html">Baked Mac n' Cheese</a></li>
+        </ul>
+        
     </body>
 </html>
