--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <ul>
             <li><a href="./recipes/mashed-potatoes.html">Mashed Potatoes</a></li>
-            <li><a href="./recipes/baked-mac-n-cheese.html">Baked Mac n' Cheese</a></li>
+            <li><a href="./recipes/macaroni-pie.html">Macaroni Pie</a></li>
         </ul>
         
     </body>
