Add content to macaroni-pie.html
Adds content for the Description, Ingredients, and Steps sections.

--- a/recipes/macaroni-pie.html
+++ b/recipes/macaroni-pie.html
@@ -11,32 +11,51 @@
         <img src="../images/macaroni-pie.jpg" alt="Macaroni pie on a plate, a fork is to the upper left.">
 
         <h2>Description</h2>
-        <p>This recipe gives you creamy, savory mashed potatoes, topped with a green garnish.</p>
+        <p>Macaroni pie is a staple food in Trinidad & Tobago. 
+            It is similar to the food referred to as 
+            <br> Baked Macaroni and Cheese in the US, however the macaroni is more compact and can be 
+            <br>cut into chunks as opposed to scooped with a spoon.
+        </p>
     
         <h2>Ingredients</h2>
         <ul>
-            <li>10 Large Idaho Potatoes</li>
-            <li>1/2 cup of melted butter</li>
-            <li>1 cup whole milk</li>
+            <li>1 tablespoon of butter</li>
+            <li>2 boxes of elbow macaroni</li>
+            <li>4 bags of shredded sharp cheddar cheese</li>
             <li>1 cup heavy cream</li>
-            <li>5 scallion stalks, thinly chopped</li>
+            <li>4 eggs</li>
             <li>1 teaspoon of salt</li>
+            <li>1 teaspoon of paprika</li>
         </ul>
 
         <h2>Steps</h2>
         <ol>
-            <li>Bring 12 ounces of water in a large saucepan to boil</li>
-            <li>While waiting for the water to boil, rinse the potatoes, 
-                then chop each potato into 4 pieces.</li>
-            <li>Put the potatoes in the water, cover the pot, and let them boil for about 25-35 minutes, 
-                or until the potatoes are soft enough to mash.</li>
-            <li>Take one cup of the potato water and put it to the side. Then drain the rest of the water.</li>
-            <li>Peel the skin off of the potato pieces.</li>
-            <li>Add the rest of the ingredients (besides the scallions) to the pot.</li>
-            <li>Mix the pot either with a hand masher or a mixer. If the potatoes seem to dry, add the 
-                saved potato water bit by bit until desired consistency is reached.</li>
-            <li>Plate the potatoes, and sprinkle the scallions on top.</li>
-            <li>Add salt to taste and enjoy! :)</li>
+            <li>Bring 24 ounces of water in 2 large saucepans to boil.</li>
+            <li>Once boiling, carefully pour the macaroni in the water, 
+                and cook until al dente.</li>
+            <li>Once the macaroni is cooked, strain all the water from 
+                the pots.</li>
+            <li>Preheat the oven to 375 degrees Fahrenheit.</li>
+            <li>Thinly spread the butter on the bottom and sides of the 
+                metal pan that will cook <br>the maraconi. Make sure that the 
+                edges of the pan are at least 2 inches high.</li>
+            <li>Sprinkle a thin layer of cheese over the bottom of the 
+                pan.</li>
+            <li>Pour half the macaroni in the pan. Add a bag of cheese, 
+                and mix.</li>
+            <li>Pour the other half of the macaroni in the pan, add another 
+                bad of cheese, and mix.</li>
+            <li>Add the third bad of cheese, the eggs, the heavy cream, 
+                and the salt to the macaroni <br>and mix.</li>
+            <li>Use a pot spoon to flatten and smooth the macaroni until 
+                it's flat. Then use the last <br>bag of cheese to create a top 
+                layer of cheese over the macaroni.</li>
+            <li>Sprinkle the paprika across the top of the cheese.</li>
+            <li>Put the macaroni pan in the oven, and cooked uncovered for 
+                about 30 minutes, or <br>until the cheese crust is a golden 
+                brown.</li>
+            <li>Take the pie out of the oven, turn the oven off, plate, 
+                and enjoy! :)</li>
         </ol>
     </body>
 </html>
