Creates and adds content to bbq-chicken.html
Adds bbq-chicken.jpg to images folder, and links to it in
bbq-chicken.html. Adds title, main heading, description, ingredients,
and steps. Edits index.html to include link to bbq-chicken.html.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/mashed-potatoes.html">Mashed Potatoes</a></li>
             <li><a href="./recipes/macaroni-pie.html">Macaroni Pie</a></li>
+            <li><a href="./recipes/bbq-chicken.html">BBQ Chicken</a></li>
         </ul>
         
     </body>
