--- a/recipes/macaroni-pie.html
+++ b/recipes/macaroni-pie.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Macaroni Pie</title>
+        <title>Macaroni Pie Recipe</title>
     </head>
 
     <body>
-        <h1>Macaroni Pie</h1>
+        <h1>Macaroni Pie Recipe</h1>
 
         <img src="../images/macaroni-pie.jpg" alt="Macaroni pie on a plate, a fork is to the upper left.">
 
