--- a/recipes/mashed-potatoes.html
+++ b/recipes/mashed-potatoes.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Mashed Potatoes Recipes</title>
+        <title>Mashed Potatoes Recipe</title>
     </head>
 
     <body>
-        <h1>Mashed Potatoes</h1>
+        <h1>Mashed Potatoes Recipe</h1>
 
         <img src="../images/mashed-potatoes.jpg" alt="Bowl of mashed paotatoes with green garnish">
     
