--- a/recipes/mashed-potatoes.html
+++ b/recipes/mashed-potatoes.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../styles.css">
         <title>Mashed Potatoes Recipe</title>
     </head>
 
